Update for cloudera-framework-0.0.5