@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.cloudera</groupId>
 	<artifactId>cloudera-cyclehire</artifactId>
@@ -47,21 +49,16 @@
 		<maven.data-download.skip>true</maven.data-download.skip>
 		<maven.assembly.skip>false</maven.assembly.skip>
 
-		<java.version>1.7</java.version>
-
-		<hadoop-cdh.version>5</hadoop-cdh.version>
-		<hadoop.version>2.6.0-cdh5.4.2</hadoop.version>
-		<hadoop-hive.version>1.1.0-cdh5.4.2</hadoop-hive.version>
-		<hadoop-flume.version>1.5.0-cdh5.4.2</hadoop-flume.version>
-		<hadoop-parquet.version>1.5.0-cdh5.4.2</hadoop-parquet.version>
+		<cloudera-framework.version>0.0.5-cdhcdh5.4.0-SNAPSHOT</cloudera-framework.version>
 
 		<opencsv.version>2.3</opencsv.version>
-		<slf4j.version>1.6.4</slf4j.version>
+		<slf4j.version>1.7.12</slf4j.version>
 		<log4j.version>1.2.16</log4j.version>
 		<commons-exec.version>1.1</commons-exec.version>
 		<jetty.version>9.2.9.v20150224</jetty.version>
-		<junit.version>4.9</junit.version>
-		<mrunit.version>0.9.0-incubating</mrunit.version>
+		<junit.version>4.12</junit.version>
+
+		<java.version>1.7</java.version>
 
 		<project.runtime-test-dir>test-runtime</project.runtime-test-dir>
 		<project.assembly-test-dir>test-assembly</project.assembly-test-dir>
@@ -69,7 +66,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<project.runtime.heap.max>2048</project.runtime.heap.max>
+		<project.runtime.heap.max>1024</project.runtime.heap.max>
+		<project.runtime.perm.heap.max>256</project.runtime.perm.heap.max>
 
 	</properties>
 
@@ -212,7 +210,8 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.9</version>
 					<configuration>
-						<argLine>-Xmx${project.runtime.heap.max}m</argLine>
+						<argLine>-Xmx${project.runtime.heap.max}m
+							-XX:MaxPermSize=${project.runtime.perm.heap.max}m</argLine>
 					</configuration>
 				</plugin>
 			</plugins>
